--- a/README.org
+++ b/README.org
@@ -1,15 +1,50 @@
 #+TITLE: Dactyl-ToDo
 
-* Organize & Commit Personal Work to Github
-** PCB Design
-** Take Dimensions for standoffs, screws & rubber feet
+* Updated Dactyl Build Guide
+** Parts List (This is what I spent on parts)
+|-----------------------------------+--------------|
+| Parts:                            | Cost in USD: |
+|-----------------------------------+--------------|
+| 3D Printed Shells                 | $40          |
+|-----------------------------------+--------------|
+| Key Switches                      | ~$50         |
+|-----------------------------------+--------------|
+| Key Caps                          | ~$50         |
+|-----------------------------------+--------------|
+| Pyralux (Flexible copper for PCB) | $60          |
+|-----------------------------------+--------------|
+|                                   |              |
+
+*** Retailers
+
+
+** Dimensions
+- Screws
+- Standoffs
+- Rubber feet
+
 ** Step-by-step instructions
-*** Updated parts list
-*** Heatshrink standoffs
-*** PCB Layering instructions
-*** Diode position
+*** Preparation
+Use soldering iron to push countersunk screws into plastic shell.
+Before wiring, be sure to heatshrink the standoffs to prevent shorts. I found 1/8"
+heatshrink tubing works best.
+
+*** Circuit design
+
+*** Etching
+
+*** Wiring
+**** TODO Prerequisites
+- How does this work?
+Key matrix explanation
+**** Diode position (Row-driven vs. Column-driven )
+You will need to consider the position of the diodes depending upon how you want
+the current from your microcontroller to flow.
 For a row-driven keyboard, the cathode ends of the diodes should face away from the switch pin. This
 allows the current to flow from the row, through the switch and out through the column.
+
+*** PCB Layering instructions
+
 *** Firmware guide
 **** config.qmk.fm
 Under board, choose 'handwired/dactyl'.
