--- a/README.org
+++ b/README.org
@@ -47,14 +47,12 @@ allows the current to flow from the row, through the switch and out through the 
 
 *** Firmware guide
 **** config.qmk.fm
-Under board, choose 'handwired/dactyl'.
-Change defaults as necessary.
-Click on 'COMPILE'.
-Once finised, download the .hex file by clicking 'FIRMWARE'.
-- Consider saving the keymap.json file for future reference.
-For MacOS & Windows, use the qmk-toolbox application to flash the Teensy 2.0.
-Follow gui instructions.
-For GNU+Linux, use your package manager to search for the teensy-loader-cli (or
-some variation therof) command-line tool. Use the following syntax to flash your
-chosen hex file:
-- $ teensy-loader-cli -mmcu=atmega32u4 -wv path/to/file.hex
+- Under board, choose 'handwired/dactyl'.
+- Change defaults as necessary.
+- Click on 'COMPILE'.
+- Once finised, download the .hex file by clicking 'FIRMWARE'. (Consider saving the keymap.json file for future reference.)
+- For MacOS & Windows, use the qmk-toolbox application to flash the Teensy 2.0.
+- Follow gui instructions.
+- For GNU+Linux, use your package manager to search for the teensy-loader-cli
+  (or some variation therof) command-line tool. Use the following syntax to
+  flash your chosen hex file: `$ teensy-loader-cli -mmcu=atmega32u4 -wv path/to/file.hex'
