--- a/presentation-notes.org
+++ b/presentation-notes.org
@@ -36,11 +36,12 @@ But I would argue there are real health benefits to using a proper ergonomic key
 **** Ulnar deviation
 ** Notable Mentions
 *** Kinesis Advantage2
+
 #+NAME kinesis
 [[file:img/818T--WBwvL._SL1500_.jpg]]
-Advantages:
-Disadvanteges: $320.00 USD
-Open Source: No
+- Advantages:
+- Disadvanteges: $320.00 USD
+- Open Source: No
 *** ErgoDox
 *** Let's Split
 *** Atreus
