--- a/presentation-notes.org
+++ b/presentation-notes.org
@@ -1,7 +1,9 @@
-#+TITLE: presentation-notes
+#+TITLE: Rochester KLUG Keyboard Meetup
 #+AUTHOR: Tim Anderson
 #+REVEAL_THEME: moon
 #+REVEAL_TRANS: fade
+#+REVEAL_MAX_SCALE: 0.85
+#+OPTIONS: reveal_slide_number:nil toc:nil
 
 #+BEGIN_NOTES
  TODO Finish Website & Mirror Presentation Notees
@@ -18,9 +20,11 @@ Who am I?
 - https://github.com/mcdviii
 - http://aberrent.online
 
+#+BEGIN_NOTES
 I work in manufacturing as a machine operator for a local furniture
   manufacturer.
 I tinker with electronics & free software on my free time.
+#+END_NOTES
 
 * Why would you want or need this?
 ** Benefits of Ergo keyboards
@@ -44,58 +48,87 @@ But I would argue there are real health benefits to using a proper ergonomic key
 
 [[file:img/Kinesis_Adv2.jpg]]
 
+#+ATTR_REVEAL: :frag (fade-in fade-in) :frag_idx (1 2 3)
 - Advantages:
 - Disadvanteges: $320.00 USD
 - Open Source: No
+#+BEGIN_NOTES
+
+#+END_NOTES
+
 ** ErgoDox
 
 [[file:img/Ergodox_EZ.jpg]]
 
+#+ATTR_REVEAL: :frag (fade-in fade-in) :frag_idx (1 2 3)
 - Advantages:
 - Disadvantages:
 - Open Source:
+#+BEGIN_NOTES
+
+#+END_NOTES
 
 ** Let's Split
 
 [[file:img/Let's_Split.jpg]]
 
+#+ATTR_REVEAL: :frag (fade-in fade-in) :frag_idx (1 2 3)
 - Advantages:
 - Disadvantages:
 - Open Source:
+#+BEGIN_NOTES
+
+#+END_NOTES
 
 ** Atreus
 
 [[file:img/Atreus.jpg]]
 
+#+ATTR_REVEAL: :frag (fade-in fade-in) :frag_idx (1 2 3)
 - Advantages: Small, single-board formfactor
 - Disadvantages: Not a split design,
 - Open Source: Yes
+#+BEGIN_NOTES
+
+#+END_NOTES
 
 ** Signum 3 (Troy Fletcher)
 
 [[file:img/Signum3.0.jpg]]
 
+#+ATTR_REVEAL: :frag (fade-in fade-in) :frag_idx (1 2 3)
 - Advantages:
 - Disadvantages:
-- Differences:
 - Open Source:
+#+BEGIN_NOTES
+
+#+END_NOTES
 
 ** Other Dactyl Variations
 *** Ergo Dactyl
 
 
 
+#+ATTR_REVEAL: :frag (fade-in fade-in) :frag_idx (1 2 3)
 - Advantages:
 - Disadvantages:
 - Open Source:
+#+BEGIN_NOTES
+Redesigned to fit Ergodox keycaps.
+#+END_NOTES
+
 
 *** Lightcycle Dactyl
 
 
 
+#+ATTR_REVEAL: :frag (fade-in fade-in) :frag_idx (1 2 3)
 - Advantages:
 - Disadvantages:
 - Open Source:
+#+BEGIN_NOTES
+
+#+END_NOTES
 
 *** Dactyl Manuform
 
@@ -104,6 +137,9 @@ But I would argue there are real health benefits to using a proper ergonomic key
 - Advantages:
 - Disadvantages:
 - Open Source:
+#+BEGIN_NOTES
+
+#+END_NOTES
 
 * What is the Dactyl Keyboard?
 - Columnar, Ortholinear, written in Clojure
